--- a/udqAutoApp/www/css/ownMenu.css
+++ b/udqAutoApp/www/css/ownMenu.css
@@ -1,34 +1,51 @@
 ﻿
 .ownbutton-circle {
-    background-color:#39A6FB;
+    background-color:#374D58;
     border:none;
-    -webkit-border-radius: 60px;/*72px;*/
-    -moz-border-radius: 60px;
-    border-radius: 60px;
-    width: 60px;
-    line-height: 60px;
-    height: 60px;
+    -webkit-border-radius: 50px;/*72px;*/
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    width: 50px;
+    line-height: 50px;
+    height: 50px;
     padding: 0px;
 }
 .ownbutton-circle:active{
-    background-color:#39A6FB;
+    background-color:#374D58;
 }
 .ownbutton-circle:focus{
-    background-color:#39A6FB;
+    background-color:#374D58;
 }
 .button-washauto-circle {
-    background-color:#39A6FB;
+    background-color:#374D58;
     border:none;
-    -webkit-border-radius: 200px;
-    -moz-border-radius: 200px;
-    border-radius: 200px;
-    width: 200px;
-    line-height: 200px;
-    height: 200px;
+    -webkit-border-radius: 266px;
+    -moz-border-radius: 266px;
+    border-radius: 266px;
+    width: 266px;
+    line-height: 266px;
+    height: 266px;
     padding: 0px;
 }
 .button-washauto-circle:active{
-    background-color:#39A6FB;
+    background-color:#374D58;
+}
+.mybutton-circle {
+    background-color:#374D58;
+    border:none;
+    -webkit-border-radius: 100px;/*72px;*/
+    -moz-border-radius: 100px;
+    border-radius: 100px;
+    width: 100px;
+    line-height: 100px;
+    height: 100px;
+    padding: 0px;
+}
+.mybutton-circle:active{
+    background-color:#374D58;
+}
+.mybutton-circle:focus{
+    background-color:#374D58;
 }
 .row-text-align{
      text-align:center;
