车辆删除bug修改

--- a/udqAutoApp/www/css/ownMenu.css
+++ b/udqAutoApp/www/css/ownMenu.css
@@ -52,12 +52,12 @@
 }
 /*洗车店*/
 .button-washstore-accept{
-    background-color:#f83838;
+    background-color:#FFBC01;
 }
 .button-washstore-complete{
-    background-color:#f83838;
+    background-color:#FFBC01;
 }
 .button-washstore-scan{
-    background-color:#f83838;
+    background-color:#FFBC01;
 }
 
