--- a/udqAutoApp/www/css/ownMenu.css
+++ b/udqAutoApp/www/css/ownMenu.css
@@ -2,12 +2,12 @@
 .ownbutton-circle {
     background-color:#374D58;
     border:none;
-    -webkit-border-radius: 50px;/*72px;*/
-    -moz-border-radius: 50px;
-    border-radius: 50px;
-    width: 50px;
-    line-height: 50px;
-    height: 50px;
+    -webkit-border-radius: 60px;/*50px;*/
+    -moz-border-radius: 60px;
+    border-radius: 60px;
+    width: 60px;
+    line-height: 60px;
+    height: 60px;
     padding: 0px;
 }
 .ownbutton-circle:active{
@@ -19,12 +19,12 @@
 .button-washauto-circle {
     background-color:#374D58;
     border:none;
-    -webkit-border-radius: 266px;
-    -moz-border-radius: 266px;
-    border-radius: 266px;
-    width: 266px;
-    line-height: 266px;
-    height: 266px;
+    -webkit-border-radius: 200px;/*266*/
+    -moz-border-radius: 200px;
+    border-radius: 200px;
+    width: 200px;
+    line-height: 200px;
+    height: 200px;
     padding: 0px;
 }
 .button-washauto-circle:active{
@@ -49,6 +49,17 @@
 }
 .row-text-align{
      text-align:center;
+}
+.washtype-img{
+    background-color:#374D58;
+    border:none;
+    -webkit-border-radius: 100px;/*72px;*/
+    -moz-border-radius: 100px;
+    border-radius: 100px;
+    width: 100px;
+    line-height: 100px;
+    height: 100px;
+    padding: 0px;
 }
 /*洗车店*/
 .button-washstore-accept{
