--- a/udqAutoApp/www/css/index.css
+++ b/udqAutoApp/www/css/index.css
@@ -145,7 +145,7 @@ h2,h3,h4,p,.item p{
       text-decoration: none; }*/
 
 /*所有按钮点击变色*/
-.button.allbutton.active, .button.allbutton.activated, .button.loginbutton.active, .button.loginbutton.activated, .button.registerInloginPage.active, .button.registerInloginPage.activated,.button.rechargeInloginPage.active, .button.rechargeInloginPage.activated{
+.button.allbutton.active, .button.allbutton.activated, .buttonclean.active, .buttonclean.activated, .button.loginbutton.active, .button.loginbutton.activated, .button.registerInloginPage.active, .button.registerInloginPage.activated,.button.rechargeInloginPage.active, .button.rechargeInloginPage.activated{
       border-color: #b76969;
       background-color: #b76969;}
 
@@ -174,6 +174,15 @@ h2,h3,h4,p,.item p{
    font-weight:600;
    border-color:rgba(250, 251, 117, 0.07);
    border-radius:3px;
+}
+/*清除评分按钮*/
+.buttonclean {
+    background-color:#ed8131;/*#f83838红色*/
+    color:white;
+    font-size:16px;
+    border:#ed8131 solid ;
+    border-radius:5px;
+    margin-top:5px;
 }
 /*输入框内的输入字体*/
 .member-span-text{
