--- a/udqAutoApp/www/css/index.css
+++ b/udqAutoApp/www/css/index.css
@@ -56,7 +56,7 @@ div.title.title-center.header-item{
     direction: ltr;
     font-size:16px;
     color:white;
-    background-color:#374D58;
+    background-color:#425A66;
 }
 /*.input-costume:active{
     background-color:#374D58;
