--- a/udqAutoApp/www/css/udqicon.css
+++ b/udqAutoApp/www/css/udqicon.css
@@ -48,7 +48,7 @@ input[readonly]:not(.cloned-text-input), textarea[readonly]:not(.cloned-text-inp
 }
 
 .item-select{
-    background-color:#374D58;
+    background-color:#425A66;
 }
 .item-select:after{
     color:white;
