--- a/udqAutoApp/www/css/ownMenu.css
+++ b/udqAutoApp/www/css/ownMenu.css
@@ -1,13 +1,13 @@
-﻿
+﻿/*首页*/
 .ownbutton-circle {
     background-color:#374D58;
     border:none;
-    -webkit-border-radius: 60px;/*50px;*/
-    -moz-border-radius: 60px;
-    border-radius: 60px;
-    width: 60px;
-    line-height: 60px;
-    height: 60px;
+    -webkit-border-radius: 50px;/*60px;*/
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    width: 100%;
+    line-height: 100%;
+    height: 100%;
     padding: 0px;
 }
 .ownbutton-circle:active{
@@ -19,12 +19,12 @@
 .button-washauto-circle {
     background-color:#374D58;
     border:none;
-    -webkit-border-radius: 200px;/*266*/
-    -moz-border-radius: 200px;
-    border-radius: 200px;
-    width: 200px;
-    line-height: 200px;
-    height: 200px;
+    -webkit-border-radius: 50%;/*200*/
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    width: 50%;
+    line-height: 50%;
+    height: 50%;
     padding: 0px;
 }
 .button-washauto-circle:active{
