--- a/udqAutoApp/www/css/ownMenu.css
+++ b/udqAutoApp/www/css/ownMenu.css
@@ -2,12 +2,12 @@
 .ownbutton-circle {
     background-color:#374D58;
     border:none;
-    -webkit-border-radius: 50px;/*60px;*/
-    -moz-border-radius: 50px;
-    border-radius: 50px;
-    width: 100%;
-    line-height: 100%;
-    height: 100%;
+    -webkit-border-radius: 60px;/*60px;*/
+    -moz-border-radius: 60px;
+    border-radius: 60px;
+    width: 60px;
+    line-height: 60px;
+    height: 60px;
     padding: 0px;
 }
 .ownbutton-circle:active{
@@ -19,12 +19,12 @@
 .button-washauto-circle {
     background-color:#374D58;
     border:none;
-    -webkit-border-radius: 50%;/*200*/
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    width: 50%;
-    line-height: 50%;
-    height: 50%;
+    -webkit-border-radius: 150px;/*200*/
+    -moz-border-radius: 150px;
+    border-radius: 150px;
+    width: 150px;
+    line-height: 150px;
+    height: 150px;
     padding: 0px;
 }
 .button-washauto-circle:active{
