--- a/udqAutoApp/www/css/index.css
+++ b/udqAutoApp/www/css/index.css
@@ -203,6 +203,12 @@ h2,h3,h4,p,.item p{
     border-radius:5px;
     margin-top:5px;
 }
+/*评价按钮*/
+.button-score{
+    background-color:#a9a9a9;
+    border:none;
+    border-radius:7px;
+}
 /*输入框内的输入字体*/
 .member-span-text{
     font-size:16px;
